link to detail page added on index page

--- a/Views/Movie/Detail.cshtml
+++ b/Views/Movie/Detail.cshtml
@@ -17,6 +17,6 @@
 <p>@Model.Genre</p>
 
 <strong>Release Date</strong>
-<p>@Model.ReleaseDate.ToString("dd/mm/yyyy")</p>
+<p>@Model.ReleaseDate.ToShortDateString() </p>
 
 
