--- a/Views/Movie/Create.cshtml
+++ b/Views/Movie/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MovieCreateViewModel;
 
+
 <form asp-controller="Movie" asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="Title"></label>
@@ -15,7 +16,7 @@
     </div>
     <div class="form-group">
         <label asp-for="ReleaseDate"></label>
-        <input class="form-control" asp-for="ReleaseDate" />
+        <input class="form-control" asp-for="ReleaseDate" type="date"/>
     </div>
     <button class="btn-btn primary" type="submit">Create Movie</button>
 </form>
