--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Movie" asp-action="Index">Movies</a></li>
+                    <li><a asp-area="" asp-controller="Movie" asp-action="Index">View Movies</a></li>
+                    <li><a asp-area="" asp-controller="Movie" asp-action="Create">Create Movie</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
