--- a/Views/Movie/Create.cshtml
+++ b/Views/Movie/Create.cshtml
@@ -19,7 +19,9 @@
     </div>
     <div class="form-group">
         <label asp-for="ReleaseDate"></label>
-        <input class="form-control" asp-for="ReleaseDate" type="date"/>
+        <input class="form-control" asp-for="ReleaseDate" type="date" value="@DateTime.Today" />
+        <span class="text-danger" asp-validation-for="ReleaseDate"></span>
+
     </div>
     <button class="btn-btn primary" type="submit">Create Movie</button>
 </form>
