--- a/Views/Movie/Create.cshtml
+++ b/Views/Movie/Create.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <label asp-for="ReleaseDate"></label>
-        <input class="form-control" asp-for="ReleaseDate" type="date" value="@DateTime.Today" />
+        <input class="form-control" asp-for="ReleaseDate" type="date" />
         <span class="text-danger" asp-validation-for="ReleaseDate"></span>
 
     </div>
