--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -1,12 +1,30 @@
 ﻿@model IEnumerable<MovieListViewModel>;
 
-<table>
-    @foreach (MovieListViewModel movie in Model)
+@{
+    if (Model.Count() == 0)
     {
-    <tr> 
-        <td> <a asp-controller="movie" asp-action="detail/@movie.Id">@movie.Title</a> </td>
-        
-    </tr>
-    }  
-</table>
+        <p>There are no movies listed at the moment.</p>
+    }
+    else
+    {
+        <table>
+            <thead>
+                <tr>
+                    <th>Title</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (MovieListViewModel movie in Model)
+                {
+                    <tr>
+                        <td> <a asp-controller="movie" asp-action="detail/@movie.Id">@movie.Title</a> </td>
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+}
+
+
 
