--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -16,10 +16,11 @@
             <tbody>
                 @foreach (MovieListViewModel movie in Model)
                 {
-                    <tr>
-                        <td> <a asp-controller="movie" asp-action="detail/@movie.Id">@movie.Title</a> </td>
+                <tr>
+                    <td> <a asp-controller="movie" asp-action="detail/@movie.Id">@movie.Title</a> </td>
+                    <td> <a asp-controller="movie" asp-action="edit/@movie.Id"> Edit</a> </td>
 
-                    </tr>
+                </tr>
                 }
             </tbody>
         </table>
