--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -18,8 +18,10 @@
                 {
                 <tr>
                     <td> <a asp-controller="movie" asp-action="detail/@movie.Id">@movie.Title</a> </td>
+                    <td>&nbsp;</td>
                     <td> <a asp-controller="movie" asp-action="edit/@movie.Id"> Edit</a> </td>
-
+                    <td>&nbsp;</td>
+                    <td> <a asp-controller="movie" asp-action="delete/@movie.Id"> Delete</a></td>
                 </tr>
                 }
             </tbody>
